--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <div class="grid">
                 
             </div>
+            <span class="message"></span>
         </main>
 
         <footer class="toolbar">
