--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header>
 
         <main>
-            <div class="grid">
+            <div class="wrap">
                 
             </div>
             <span class="message"></span>
