--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="toolbar">
             <div class="brand">
                 <img src="./img/logo.png" alt="logo">
-                <h1>Campo minato: la Griglia</h1>
+                <h1>Campo minato</h1>
             </div>
     
             <div class="cta">
